[package]
name = "crabwise"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "=4.5.41", features = ["derive"] }
rand = "0.9.2"
sysinfo = "0.30"
once_cell = "1"
libc = "0.2.175"
chrono = "0.4.41"
aligned-vec = "0.6.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }
